@@ -97,6 +97,9 @@ The <action> type attribute can be add,update,fix,remove.
       <action issue="FILEUPLOAD-204" dev="jochen" type="fix" due-to="Hakju Oh">
         FileItem.getHeaders() returns always null.
       </action>
+      <action issue="FILEUPLOAD-204" dev="tn" type="fix" due-to="Damian Kolasa">
+        Insecure request size checking
+      </action>
       <action issue="FILEUPLOAD-214" dev="simonetripodi" type="fix" due-to="Matthew Runo">
         ServletFileUpload only accepts POST requests
       </action>
